--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,22 @@ description = "A Python package for the Item Response Warehouse (IRW)"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "redivis",
-    "pandas",
-    "numpy"
+    "redivis>=0.18.0",
+    "pandas>=1.3.0",
+    "numpy>=1.20.0"
 ]
 classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-    "Operating System :: OS Independent"
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Scientific/Engineering",
 ]
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
