--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ requires-python = ">=3.9"
 dependencies = [
     "redivis>=0.18.0",
     "pandas>=1.3.0",
-    "numpy>=1.20.0"
+    "numpy>=1.20.0",
+    "setuptools>=65.0"
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -29,6 +30,8 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Topic :: Scientific/Engineering",
 ]
+
+
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
 
